--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -8,6 +8,7 @@
     android:paddingRight="10dp"
     android:paddingTop="10dp"
     android:orientation="vertical"
+    android:background="@drawable/bk"
     tools:context="com.example.tannguyen.project2017.SignUpActivity">
 
     <TextView
