--- a/app/src/main/res/layout/custom_listview.xml
+++ b/app/src/main/res/layout/custom_listview.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/custom_lisview">
 
     <TableRow
         android:layout_width="match_parent"
@@ -13,8 +14,9 @@
         <TextView
             android:id="@+id/textView"
             android:layout_width="90dp"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:text="Name:"
+            android:textAlignment="center"
             android:textSize="18sp" />
 
         <TextView
@@ -29,7 +31,8 @@
             android:layout_height="30dp"
             android:text="Select"
             android:textSize="12sp"
-            android:visibility="invisible" />
+            android:visibility="invisible"
+            android:background="@drawable/custom_button"/>
 
     </TableRow>
 
@@ -44,7 +47,9 @@
             android:layout_width="100dp"
             android:layout_height="match_parent"
             android:layout_weight="0.11"
-            app:srcCompat="@android:drawable/ic_menu_compass" />
+            app:srcCompat="@android:drawable/ic_menu_compass"
+            android:scaleType="centerInside"
+            android:adjustViewBounds="true"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -58,7 +63,7 @@
 
                 <TextView
                     android:id="@+id/textView2"
-                    android:layout_width="100dp"
+                    android:layout_width="105dp"
                     android:layout_height="wrap_content"
                     android:text="Phone Number:" />
 
@@ -76,7 +81,7 @@
 
                 <TextView
                     android:id="@+id/textView5"
-                    android:layout_width="100dp"
+                    android:layout_width="105dp"
                     android:layout_height="wrap_content"
                     android:text="From:" />
 
@@ -94,7 +99,7 @@
 
                 <TextView
                     android:id="@+id/textView6"
-                    android:layout_width="100dp"
+                    android:layout_width="105dp"
                     android:layout_height="wrap_content"
                     android:text="To:" />
 
@@ -102,7 +107,8 @@
                     android:id="@+id/tvAddressDestination"
                     android:layout_width="160dp"
                     android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:text="TextView"
+                    />
             </TableRow>
 
             <TableRow
@@ -112,7 +118,7 @@
 
                 <TextView
                     android:id="@+id/textView7"
-                    android:layout_width="100dp"
+                    android:layout_width="105dp"
                     android:layout_height="wrap_content"
                     android:text="Weight:" />
 
@@ -120,10 +126,17 @@
                     android:id="@+id/tvWeight"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:text="TextView"
+                    />
             </TableRow>
         </LinearLayout>
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:background="?android:attr/textColorLinkInverse" />
 
 </LinearLayout>
