--- a/app/src/main/res/menu/context_listview.xml
+++ b/app/src/main/res/menu/context_listview.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
-
     <item
-        android:id="@+id/item_my_order"
-        android:title="My Order" />
+        android:id="@+id/item_show"
+        android:title="Show"
+        />
     <item
-        android:id="@+id/item_history"
-        android:title="History" />
+        android:id="@+id/item_delete"
+        android:title="Deleted" />
 </menu>
