--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,6 @@
         <item name="android:popupMenuStyle">@style/PopupMenu</item>
     </style>
     <style name="PopupMenu" parent="android:Widget.Holo.Light.ListPopupWindow">
-        <item name="android:popupBackground">#00FFFF</item>
+        <item name="android:popupBackground">@color/colorPrimaryDark</item>
     </style>
 </resources>
