--- a/app/src/main/res/drawable/custom_lisview.xml
+++ b/app/src/main/res/drawable/custom_lisview.xml
@@ -2,9 +2,6 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <gradient
-        android:startColor="#00CCFF"
-        android:centerColor="#228B22"
-        android:endColor="#00CCFF"
         android:angle="90"/>
     <padding android:left="2dp"
         android:top="2dp"
@@ -15,3 +12,7 @@
         android:color="#FFFFFF" />
     <corners android:radius= "8dp" />
 </shape>
+
+    <!--android:startColor="#00CCFF"-->
+    <!--android:centerColor="#228B22"-->
+    <!--android:endColor="#00CCFF"-->
