--- a/app/src/main/res/layout/custom_listview.xml
+++ b/app/src/main/res/layout/custom_listview.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="@drawable/custom_lisview">
+    android:background="@drawable/custom_lisview"
+    android:orientation="vertical">
 
     <TableRow
         android:layout_width="match_parent"
@@ -17,28 +17,30 @@
             android:layout_height="30dp"
             android:text="Name:"
             android:textAlignment="center"
+            android:textColor="@color/common_google_signin_btn_text_dark_focused"
             android:textSize="18sp" />
 
         <TextView
             android:id="@+id/tvName"
             android:layout_width="190dp"
             android:layout_height="wrap_content"
+            android:textColor="@color/common_google_signin_btn_text_dark_focused"
             android:textSize="18sp" />
 
         <Button
             android:id="@+id/btnselect"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
+            android:background="@drawable/custom_button"
             android:text="Select"
             android:textSize="12sp"
-            android:visibility="invisible"
-            android:background="@drawable/custom_button"/>
+            android:visibility="invisible" />
 
     </TableRow>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="horizontal"
         android:weightSum="1">
 
@@ -47,13 +49,14 @@
             android:layout_width="100dp"
             android:layout_height="match_parent"
             android:layout_weight="0.11"
-            app:srcCompat="@android:drawable/ic_menu_compass"
+            android:adjustViewBounds="true"
             android:scaleType="centerInside"
-            android:adjustViewBounds="true"/>
+            app:srcCompat="@android:drawable/ic_menu_compass" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/custom_lisview"
             android:orientation="vertical">
 
             <TableRow
@@ -65,13 +68,15 @@
                     android:id="@+id/textView2"
                     android:layout_width="105dp"
                     android:layout_height="wrap_content"
-                    android:text="Phone Number:" />
+                    android:text="Phone Number:"
+                    android:textColor="@color/common_google_signin_btn_text_dark_focused" />
 
                 <TextView
                     android:id="@+id/tvNumPhone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:text="TextView"
+                    android:textColor="@color/common_google_signin_btn_text_dark_focused" />
             </TableRow>
 
             <TableRow
@@ -83,13 +88,14 @@
                     android:id="@+id/textView5"
                     android:layout_width="105dp"
                     android:layout_height="wrap_content"
-                    android:text="From:" />
+                    android:text="From:"
+                    android:textColor="@color/common_google_signin_btn_text_dark_focused" />
 
                 <TextView
                     android:id="@+id/tvAddressStart"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                     />
+                    android:textColor="@color/common_google_signin_btn_text_dark_focused" />
             </TableRow>
 
             <TableRow
@@ -101,14 +107,15 @@
                     android:id="@+id/textView6"
                     android:layout_width="105dp"
                     android:layout_height="wrap_content"
-                    android:text="To:" />
+                    android:text="To:"
+                    android:textColor="@color/common_google_signin_btn_text_dark_focused" />
 
                 <TextView
                     android:id="@+id/tvAddressDestination"
                     android:layout_width="160dp"
                     android:layout_height="wrap_content"
                     android:text="TextView"
-                    />
+                    android:textColor="@color/common_google_signin_btn_text_dark_focused" />
             </TableRow>
 
             <TableRow
@@ -120,14 +127,15 @@
                     android:id="@+id/textView7"
                     android:layout_width="105dp"
                     android:layout_height="wrap_content"
-                    android:text="Weight:" />
+                    android:text="Weight:"
+                    android:textColor="@color/common_google_signin_btn_text_dark_focused" />
 
                 <TextView
                     android:id="@+id/tvWeight"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="TextView"
-                    />
+                    android:textColor="@color/common_google_signin_btn_text_dark_focused" />
             </TableRow>
         </LinearLayout>
 
@@ -136,7 +144,8 @@
     <TextView
         android:id="@+id/textView10"
         android:layout_width="match_parent"
-        android:layout_height="5dp"
+        android:layout_height="2dp"
         android:background="?android:attr/textColorLinkInverse" />
 
 </LinearLayout>
+
