--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,4 +8,7 @@
     <item
         android:id="@+id/item_history"
         android:title="History" />
+    <item
+        android:id="@+id/item_logout"
+        android:title="Log Out" />
 </menu>
